# PyDTM

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  examples.ipynb  pyproject.toml  update_version.py
.github/workflows/: publish-docs.yml  publish-pypi.yml  publish-test-pypi.yml  python-publish.yml  release.yml  test-RTD.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  pydtm.rst
env/: environment.yaml  requirements.txt
examples/: examples.ipynb
src/: api.py  test_request.py  utils.py
src/pydtm/: __init__.py  api.py  utils.py
src/pydtm/data/: README.md
src/tests/: test_api.py
tests/: test_api.py  test_utils.py
